# mihomo-rust

./: Cargo.toml  README.md  config.yaml
.github/workflows/: test.yml
crates/mihomo-api/src/: lib.rs  routes.rs
crates/mihomo-api/tests/: api_test.rs
crates/mihomo-app/: Cargo.toml
crates/mihomo-app/src/: main.rs
crates/mihomo-common/src/: adapter_type.rs  dns_mode.rs  metadata.rs  process_lookup.rs
crates/mihomo-config/src/: dns_parser.rs  lib.rs  proxy_parser.rs  raw.rs  rule_parser.rs
crates/mihomo-config/tests/: config_persistence_test.rs  config_test.rs
crates/mihomo-dns/src/: cache.rs  server.rs
crates/mihomo-listener/: Cargo.toml
crates/mihomo-listener/src/: http_proxy.rs  lib.rs  tun_conn.rs  tun_listener.rs
crates/mihomo-proxy/: Cargo.toml
crates/mihomo-proxy/src/: direct.rs  health.rs  lib.rs  reject.rs  shadowsocks_adapter.rs  trojan.rs  v2ray_plugin.rs
crates/mihomo-rules/src/: lib.rs  (+2 more)
crates/mihomo-transport/: Cargo.toml
docs/: ci-status.md  gap-analysis.md  index.html  migration-from-go-mihomo.md  roadmap.md  soak-test-plan.md  vision.md
docs/adr/: 0001-mihomo-transport-crate.md
docs/specs/: api-config-reload.md  dns-doh-dot.md  dns-hosts-test-plan.md  dns-hosts.md  dns-nameserver-policy.md  geodata-subsection.md  inbound-auth-acl.md  listeners-unified.md  metrics-prometheus.md  proxy-http-socks-outbound.md  proxy-vmess-test-plan.md  proxy-vmess.md  rule-geosite-test-plan.md  rule-geosite.md  rule-provider-upgrade-test-plan.md  rule-provider-upgrade.md  sub-rules-test-plan.md  sub-rules.md  transport-layer-test-plan.md  transport-layer.md
mihomo-rust/crates/mihomo-api/: Cargo.toml
mihomo-rust/crates/mihomo-common/: Cargo.toml
mihomo-rust/crates/mihomo-common/src/: adapter.rs  error.rs  lib.rs  rule.rs  tunnel_mode.rs
mihomo-rust/crates/mihomo-config/: Cargo.toml
mihomo-rust/tests/: test_ss.sh
tests/: test_trojan.sh  test_tun_qemu.sh
tests/tun-qemu/: guest-init.sh  mihomo-tun.yaml
(+46 files in other folders)
