[package]
name = "mihomo-api"
version.workspace = true
edition.workspace = true

[dependencies]
mihomo-common = { workspace = true }
mihomo-tunnel = { workspace = true }
mihomo-dns = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
